# easier-proofs

./: Makefile  README.md  dune-project  easier_proof.opam  grammar.txt  run_examples.sh  trash.sh
doc/: rex.md
dsl_properties/: ast.ml  grammar.txt  lexer.mll  main.ml  parser.mly
examples/: _CoqProject  cleanup.rb  configure.sh  generate.rb  readme.md
examples/bool/: .conj_disj.aux  Bool.v  andb.properties  andb.result  bool.ml  bool_defs.ml  conj_disj.glob  conj_disj.v  properties  properties.md
examples/bool/props/: andb.properties
examples/coq_lib/: CpdtTactics.v
examples/equality/: readme.md
examples/list/: List.v  append.v  list.ml  list_defs.ml  properties  readme  readme.md
examples/nat/: Nat.v  add.v  dune  easier_proofs.ml  nat.ml  properties  readme.md  trivial.v
examples/others/: diff.properties
lib/: ast.ml  dslProp.ml  dune  generateProofs.ml  lexer.mll  parser.mly
src/: .ocamlformat  ast.ml  ast.mli  dslProp.ml  dune  generateProofs.ml  generateProofs.mli  newDsl.ml
src/tests/: .ocamlformat  dslprop_test.ml  dune  easier_proof_test.ml
src/tooling/: README.md  lint.sh
test/: dslprop_test.ml  dune
tests/: dslprop_test.ml
